k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: altshare-ui
  labels:
    app: altshare-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: altshare-ui
  template:
    metadata:
      labels:
        app: altshare-ui
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
      - name: altshare-ui
        image: '${REGISTRY_URL}:${IMAGE_TAG}'
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
