k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: altshare-ui
spec:
  selector:
    app: altshare-ui
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
