k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: altshare-ui-ingress
spec:
  ingressClassName: public
  rules:
  - host: share.3xjn.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: altshare-ui
            port:
              number: 80
  tls:
  - hosts:
    - share.3xjn.dev
    secretName: altshare-ui-tls-cert
